Fix scrollbars on Safari and Chrome

--- a/assets/style.css
+++ b/assets/style.css
@@ -6,21 +6,27 @@
   h1 {
     @apply text-4xl mb-2;
   }
+
   h2 {
     @apply text-3xl mb-2;
   }
+
   h3 {
     @apply text-2xl mb-2;
   }
+
   h4 {
     @apply text-xl mb-2;
   }
+
   p {
     @apply mb-2;
   }
+
   a {
     @apply text-skyblue;
   }
+
   svg {
     @apply fill-current;
   }
@@ -30,7 +36,13 @@
   .nav-btn-selected {
     @apply p-2 bg-neutral-900 rounded;
   }
+
   .nav-btn {
     @apply p-2;
   }
+}
+
+*::-webkit-scrollbar {
+  display: none;
+  /* Safari and Chrome */
 }
